--- a/src/translations/pt.po
+++ b/src/translations/pt.po
@@ -1,7 +1,7 @@
-# Portuguese translations for PACKAGE package.
-# Copyright (C) 2007 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# Automatically generated, 2007.
+# Portuguese translations for FusionForge package.
+# Copyright (C) 2008-2010 FusionForge Team
+# This file is distributed under the same license as the FusionForge package.
+# Automatically generated
 #
 msgid ""
 msgstr ""
