--- a/src/CHANGES
+++ b/src/CHANGES
@@ -1,6 +1,7 @@
 FusionForge-5.1:
 * Theme: new Funky Theme (Capgemini)
 * Docman: new UI (Capgemini)
+* Docman: extract documents and directories as zip archive (Capgemini)
 * Trackers: New progressbar to view completion state (when custom status field is used) (Alain Peyrat)
 * Trackers: Sorting improved to allow text & select fields (Alcatel-Lucent)
 * [#127] Patch to auto approve projects.
