--- a/src/plugins/cvstracker/README
+++ b/src/plugins/cvstracker/README
@@ -22,7 +22,7 @@ COPYING file.  Please check out the AUTHORS file to see who helped
 make this possible.
 
 Thanks for taking the time to download this code.  If you have any
-questions please feel free to visit http://gforge.org/
+questions please feel free to visit http://fusionforge.org/
 
 
 1. Installation Instructions
